--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -42,7 +42,7 @@ jobs:
       - name: Build and push images
         env:
           TAGS: ${{ steps.meta.outputs.tags }}
-        run: ko build cmd/server/main.go --bare --tags $(echo $TAGS | tr ' ' ',')
+        run: ko build cmd/bot/main.go --bare --tags $(echo $TAGS | tr ' ' ',')
 
       - name: Create GitHub Release
         uses: ncipollo/release-action@v1
